# display-tiles-esp32

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  sdkconfig.defaults
components/ch422g/: CH422GController.cpp  CMakeLists.txt
components/ch422g/include/: CH422GController.hpp
hello_world_lcd/: CMakeLists.txt  sdkconfig.defaults
hello_world_lcd/main/: CMakeLists.txt  idf_component.yml  main.cpp
main/: TileEngine.cpp  TileEngine.hpp  idf_component.yml  main.cpp
tiles_prototype/: CMakeLists.txt  sdkconfig.defaults
tiles_prototype/components/ch422g/: CH422GController.cpp  CMakeLists.txt  ch422g.c
tiles_prototype/components/ch422g/include/: CH422GController.hpp  ch422g.h
tiles_prototype/main/: CMakeLists.txt  TileEngine.cpp  TileEngine.hpp  idf_component.yml  main.c  main.cpp
tiles_prototype/scripts/: convert_to_rgb565.py
